# vfs.slingbox

./: CMakeLists.txt
src/: SlingboxFile.cpp
vfs.slingbox/: addon.xml
vfs.slingbox/resources/: settings.xml
vfs.slingbox/resources/language/English/: strings.po
